# ares

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
backend/: JOB_CREATION_SEQUENCE.md  OPTIMIZATION_QUEUE_README.md  create_sample_job.py  docker-compose.yml  new_database.sql  requirements.txt  test_job_results.py  test_queue_connection.py  test_queue_integration.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  db.py  deps.py  queue.py
backend/app/models/: global_entities.py  items.py  job_config.py  job_results.py  jobs.py  materials.py  missions.py  recipes.py  schedules.py
backend/app/routers/: global_entities.py  items.py  jobs.py  materials.py  metrics.py  missions.py  optimization.py  recipes.py  schedules.py
backend/app/services/: job_results_processor.py  jobs.py  mission_data_builder.py  optimization.py  queue.py  waste_calc.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/diff/: page.tsx
frontend/app/items/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/missions/: page.tsx
frontend/app/optimizer/: page.tsx
frontend/app/recipes/: page.tsx
frontend/components/: DiffViewer.tsx  OptimizationCharts.tsx  sidebar.tsx  top-bar.tsx
frontend/contexts/: sidebar-context.tsx
frontend/hooks/: use-realtime.ts
frontend/types/: items.ts  jobs.ts  mission.ts  missions.ts  recipe.ts  recipes.ts
optimizing_system/: README.md  config.py  main.py  model.py  pyproject.toml  test_worker.py  worker.py
(+43 files in other folders)
